# rust-flexible-logging-solution

./: Cargo.toml  README.md
easy-log/: Cargo.toml
easy-log/src/: lib.rs
src/: demo_log_config.rs  main.rs
