[package]
name = "rust-flexible-logging-solution"
version = "0.1.0"
authors = ["Wison Ye <wisonye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
enable-log = ["easy-log"]

[dependencies]
easy-log = { path = "./easy-log", version = "0.1.0", optional = true }
